# SNOTE

./: .eslintrc.js  .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.vue  main.js  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Search.vue
